# zeroclaw

./: .gitignore  COMPOSIO_ATTACHMENT_FIX.md  CORRECAO_LAYER1_BYPASS.md  Cargo.toml  DIAGNOSIS_AGENT_ISSUE.md  GUIA_ANEXOS_EMAIL.md  README.md  RESUMO_CORRECAO.md  SOLUCAO_FINAL_HISTORICO.md
composio-sdk/: .gitignore  CHANGELOG.md  CLEANUP_REPORT.md  CLEANUP_SUMMARY.md  COMPATIBILITY_VALIDATION_REPORT.md  Cargo.toml  DEVELOPMENT.md  LICENSE-APACHE  MEMORY_FOOTPRINT_REPORT.md  PERFORMANCE_REPORT.md  PUBLICATION_CHECKLIST.md  PUBLISHING.md  README.md  README_META_TOOLS.md  RELEASE_GUIDE.md  SKILLS_BUNDLED.md  WIZARD_INSTRUCTIONS.md  build.rs  test-local.ps1  test-local.sh
composio-sdk/benches/: IMPLEMENTATION_SUMMARY.md  README.md  python_comparison.py  sdk_benchmarks.rs
composio-sdk/examples/: .gitkeep  auth_link_creation.rs  authentication.rs  basic_usage.rs  debug_request.rs  error_handling.rs  local_debug.rs  memory_profile.rs  meta_tools.rs  meta_tools_schema.rs  meta_tools_usage.rs  skills_extraction.rs  test_api_key.rs  test_raw_response.rs  test_serialization.rs  test_simple_session.rs  tool_execution.rs  toolkit_listing.rs  wizard_instructions.rs
composio-sdk/skills/: AGENTS.md  SKILL.md
composio-sdk/src/: client.rs  config.rs  error.rs  lib.rs  retry.rs  session.rs  skills_integration.rs
composio-sdk/tests/: .gitkeep  README.md  auth_link_creation_test.rs  compatibility_validation_test.rs  error_handling_integration_test.rs  meta_tool_execution_test.rs  meta_tools_schema_test.rs  request_models_test.rs  response_models_test.rs  retry_behavior_test.rs  (+6 more)
(+64 files in other folders)
